Made first two pages of website

--- a/index.html
+++ b/index.html
@@ -15,18 +15,31 @@
             <div class="htext">Why I deserve to be in the Nyaa Server</div>
             <button class="hbutton">Dont click me</button>
         </div>
-
-        <div class="heroleft">
-            <div class="title">
-                <h1>Why I should be allowed into the Nyaa server?</h1>
+        <div class="hero">
+            <div class="heroleft">
+                <div class="title">
+                    <h1>Why I should be allowed into the Nyaa server?</h1>
+                </div>
+                <div class="subtitle">
+                    <p>I should be allowed to ‘Hep’ in the Nyaa server as Teuth is allowed to Nyaa with unfettered access. I do not view this as fair. While I don’t blame Teuth for these decisions and am supportive of them getting to Nyaa whenever for times in which they need to let off stress from activities such as buying a game in Canada, being cold in Canada, hearing people speak French (French scares me), wanting to be silly, wanting to be quirky, not consuming a minion meme in an appropriate amount of time, etc, there are a myriad of reasons as to why Teuth can Nyaa. The appealing party who has jurisdiction over this is ‘bums’ (short for bumiticus) (which in turn is short for a whitefly insect native to the Burmese amber region, named ‘Aleurodicus burmiticus Cockerell’ found in 1919). Bums as we shall call them moving forward, has supreme authority over this channel, as such we will be appealing to them.</p>
+                </div>
             </div>
-            <div class="subtitle">
-                <p>I should be allowed to ‘Hep’ in the Nyaa server as Teuth is allowed to Nyaa with unfettered access. I do not view this as fair. While I don’t blame Teuth for these decisions and am supportive of them getting to Nyaa whenever for times in which they need to let off stress from activities such as buying a game in Canada, being cold in Canada, hearing people speak French (French scares me), wanting to be silly, wanting to be quirky, not consuming a minion meme in an appropriate amount of time, etc, there are a myriad of reasons as to why Teuth can Nyaa. The appealing party who has jurisdiction over this is ‘bums’ (short for bumiticus) (which in turn is short for a whitefly insect native to the Burmese amber region, named ‘Aleurodicus burmiticus Cockerell’ found in 1919). Bums as we shall call them moving forward, has supreme authority over this channel, as such we will be appealing to them.</p>
+            <div class="heroright">
+                <em class="bums">bums found in wild</em>
+                <img class="bumswild" src="images/bums.png" alt="bums found in wild">
             </div>
         </div>
-        <div class="heroright">
-            <em class="bums">bums found in wild</em>
-            <img class="bumswild" src="images/bums.png" alt="bums found in wild">
+
+        <div class="secondpage">
+            <div class="secondleft">
+                <div class="secondheader"><h2>What is a 'Hep'</h2></div>
+                <div class="secondbody"><p>First let’s start with what a ‘Hep’ is, heps are sounds capybara’s make in response to external stimuli or to call other capybara’s. These sounds are cute, they reduce anxiety, alleviate stress, and help cure depression when listening to them. They have a more subtle relaxing sound than a Nyaa. While Nyaa’s are generally seen as cute, and helpful like Heps, unlike a Hep, A Nyaa under the wrong circumstances has been known to invoke violence, defamation, lust, tremors, unstable muscle spasms, and other debilitating and societal issues. A Nyaa under most circumstances is great, but must also be used responsibly. I believe a proper Hep to Nyaa ratio is ideal to maintain harmony in the Nyaa server.
+                    https://www.youtube.com/watch?v=v0G_CfAKJY0</p>
+                </div>
+            </div>
+            <div class="secondright">
+                <img class="capy1" src="images/capynose.webp" alt="capybara nose close">
+            </div>
         </div>
 
     </body>
