Made first two pages of website

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             </div>
         </div>
 
+        <div class="graphpage">
+            <div class="graphheader"><h2>Here's a graph containing the current Nyaa to Hep ratio</h2></div>
+            <img class="graph1" src="images/chart1.png" alt="chart1">
+        </div>
+
     </body>
 
 
